--- a/analizer_frontend/src/App.css
+++ b/analizer_frontend/src/App.css
@@ -31,7 +31,7 @@
 }
 
 /* Кнопка Анализировать */
-.analyze-button {
+.button {
   font-size: 18px;
   padding: 10px 20px;
   background-color: #007BFF;
@@ -56,4 +56,32 @@
   align-items: center;
   justify-content: center;
   font-size: 16px;
+}
+
+/* Контейнер для списка чекбоксов */
+.checkbox-container {
+  display: grid;
+  grid-template-columns: 1fr; /* Одна колонка */
+  gap: 10px; /* Расстояние между элементами */
+  padding: 20px;
+  max-width: 400px; /* Максимальная ширина для контейнера */
+  margin: 0 auto; /* Центрируем контейнер по горизонтали */
+}
+
+/* Индивидуальные элементы чекбокса */
+.checkbox-item {
+  display: flex;
+  align-items: center; /* Выравнивание по центру по вертикали */
+  font-size: 16px; /* Размер текста */
+}
+
+/* Мелкие отступы между чекбоксом и лейблом */
+.checkbox-item input {
+  margin-right: 10px; /* Отступ справа от чекбокса */
+}
+
+/* Заголовок блока с чекбоксами */
+h2 {
+  text-align: center;
+  margin-bottom: 20px;
 }
